[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com"},
]
dependencies = [
    "aiogram==3.2.0",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.23",
    "psycopg>=3.1.14",
    "alembic>=1.13.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "black>=23.12.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.11.0",
    "ipython>=8.18.1",
    "aiosqlite>=0.19.0",
    "isort>=5.13.2",
]

